# add_test_executable(test_dm.bin test_dm.c)
# target_link_libraries(test_dm.bin PRIVATE dm)
# add_test_executable(test_mm_leakage.bin test_mm_leakage.c)
# add_test_executable(test_sd.bin test_sd.c)
# add_test_executable(test_fat32_single.bin test_fat32_single.c)
# add_test_executable(test_fat32_multi.bin test_fat32_multi.c)
# add_test_executable(test_fat32_multi_child1.bin test_fat32_multi_child1.c)
# add_test_executable(test_fat32_multi_child2.bin test_fat32_multi_child2.c)
# add_test_executable(test_fat32_multi_child3.bin test_fat32_multi_child3.c)
# add_test_executable(test_fsm_fat_single.bin test_fsm_fat_single.c)
# add_test_executable(test_fsm_fat_partition.bin test_fsm_fat_partition.c)
# add_test_executable(test_fsm_fat_multi.bin test_fsm_fat_multi.c)
# add_test_executable(test_fsm_fat_child1.bin test_fsm_fat_child1.c)
# add_test_executable(test_fsm_fat_child2.bin test_fsm_fat_child2.c)
# add_test_executable(test_fsm_fat_child3.bin test_fsm_fat_child3.c)
# add_test_executable(test_mbr.bin test_sd_mbr.c)
# add_test_executable(test_fat_perf.bin test_fat_perf.c)
# add_test_executable(test_ext4.bin test_ext4.c)
# add_test_executable(test_fsm_ext4.bin test_fsm_ext4.c)
# add_test_executable(test_vaddr.bin test_vaddr.c)
# add_test_executable(test_scanf.bin test_scanf.c)
# add_test_executable(test_register_window.bin test_register_window.c)
# add_test_executable(test_flash.bin test_flash.c)
# add_test_executable(test_pagecache_perf.bin test_pagecache_perf.c)